[package]
name = "gamemap"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "gamemap"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.0"
lazy_static = "1.0"
petgraph = "0.5.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
vec_map="0.8.2"
bincode = "1.0"
john-wick-parse = { path = "../JohnWickParse" }

geo-types = "0.6.1"
geo-clipper = "0.4.0"

